--- a/larafirststeps/package.json
+++ b/larafirststeps/package.json
@@ -11,7 +11,7 @@
         "@tailwindcss/vite": "^4.0.0",
         "alpinejs": "^3.4.2",
         "autoprefixer": "^10.4.2",
-        "axios": "^1.11.0",
+        "axios": "^1.13.2",
         "concurrently": "^9.0.1",
         "laravel-vite-plugin": "^2.0.0",
         "postcss": "^8.4.31",
@@ -19,11 +19,13 @@
         "vite": "^7.0.7"
     },
     "dependencies": {
+        "@mdi/font": "^7.4.47",
         "@oruga-ui/oruga-next": "^0.12.3",
         "@oruga-ui/theme-oruga": "^0.8.1",
         "@vitejs/plugin-vue": "^6.0.3",
         "sass": "^1.97.1",
         "vue": "^3.5.26",
-        "vue-loader": "^17.4.2"
+        "vue-loader": "^17.4.2",
+        "vue-router": "^4.6.4"
     }
 }
